added version to package.json

--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 
 {
   "name": "hardhat-fundme-project",
-  "author": "Daena McClintock"
+  "author": "Daena McClintock",
+  "version": "1.0.0",
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers@^0.3.0-beta.13",
     "@nomiclabs/hardhat-etherscan": "^3.0.0",
